# github-topics-tool

./: .gitignore  LICENSE  Makefile  README.md  github-topics.yml  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: DOCKER-SETUP.md
scripts/: build-docker.sh  github-topics.sh
src/: cli.py  config.py  main.py  topics.py
